# cmake-gtest-ci

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  add_8cpp.html  add_8cpp.js  add_8cpp__incl.map  add_8cpp__incl.md5  add_8cpp_ab1004f5ceefea02cb555e444bab273ac_icgraph.md5  add_8h.html  add_8h.js  add_8h__dep__incl.map  add_8h__dep__incl.md5  add_8h_ab1004f5ceefea02cb555e444bab273ac_icgraph.map  add_8h_source.html  dir_296d53ceaeaa7e099814a6def439fe8a.html  dir_296d53ceaeaa7e099814a6def439fe8a.js  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  main_8cpp_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  multiply_8cpp.html  multiply_8cpp.js  multiply_8cpp__incl.map  multiply_8cpp__incl.md5  multiply_8cpp_abea3777e3914a8bfa8fee7fa1ddfb9ff_icgraph.map  multiply_8h.html  multiply_8h.js  multiply_8h__dep__incl.map  multiply_8h__dep__incl.md5  multiply_8h_abea3777e3914a8bfa8fee7fa1ddfb9ff_icgraph.md5  multiply_8h_source.html  (+2 more)
.github/workflows/: build.yml  code_coverage.yml  documentation.yml  lint.yml
docs/: Doxyfile
search/: all_0.js  all_1.js  all_2.js  all_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt  main.cpp
src/math/: add.cpp  add.h  multiply.cpp  multiply.h
test/: CMakeLists.txt  main.cpp
test/math/: add.cpp  multiply.cpp
test/test/: testing.h
